fix: fix bug package dao